Gnome: Fix unreadable text in calendar events

--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -5571,6 +5571,16 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   border: 0;
   background-color: #dcdcdc; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #C3C7D1;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #C3C7D1;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
